<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_tflite_inference</name>
  <version>0.0.1</version>
  <description>Provide ROS nodes for AI model inference based on tflite and deliver result via ROS message</description>
  <maintainer email="quic_xiaolee@quicinc.com">Xiao Li</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Build Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>qrb_ros_tensor_list_msgs</depend>

  <!-- Runtime Dependencies -->
  <!-- <exec_depend>std_msgs</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
