<package format="3">
  <name>qrb_yolo_process</name>
  <version>1.0.1</version>
  <description>Library for Yolo pre/post process</description>
  <maintainer email="xiaolee@qti.qualcomm.com">Xiao Li</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
